# voice-connector-template

./: .gitignore  README.md  TESTING.md
.github/workflows/: ci.yml  dependabot-review.yml
nodejs/express/: Dockerfile  Makefile  README.md  app.js  jest.config.js  package.json
nodejs/express/__tests__/: api.test.js
nodejs/express/routers/health_check/: health_handler.js
nodejs/express/routers/voice/: elevenlabs_sample.js  elevenlabs_streaming_sample.js  voice_handler.js
python/fastapi/: .dockerignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  pytest.ini
python/fastapi/routers/: __init__.py
python/fastapi/routers/health_check/: health_handler.py
python/fastapi/routers/voice/: elevenlabs_sample.py  elevenlabs_streaming_sample.py  voice_handler.py
python/fastapi/tests/: test_api.py
