[tool.poetry]
name = "fast api template connector"
version = "0.1.0"
description = "fast api template connector"
authors = ["juan marcos <juan@unith.ai>"]
readme = "./README.md"
package-mode = false
packages = []

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.1,<0.35.0"
pydantic = ">=2.11.3,<3.0.0"
httpx = {extras = ["http2"], version = "^0.28.1"}
python-dotenv = ">=1.1.0,<2.0.0"
requests = "^2.32.5"
h11 = ">=0.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
